added media queries for responsiveness

--- a/index.html
+++ b/index.html
@@ -34,10 +34,6 @@
         </li>
         <li>
           <input type="text" placeholder="Search" />
-          <br />
-          <a href="#">
-            <i class="fas fa-search"></i>
-          </a>
         </li>
       </ul>
     </div>
@@ -179,28 +175,27 @@
           cum nostrum officiis amet ipsum. Aspernatur provident mollitia
           perferendis laudantium odit nulla!
         </p>
-        <a href="#">GitHub Profile</a>
+        <a class="btn-readmore" href="#">GitHub Profile</a>
       </section>
-
-      <footer>
-        <div id="footer">
-          <h3>Follow me on</h3>
-          <div id="social-media" class="footer">
-            <ul>
-              <li>
-                <a href="#"><i class="fab fa-facebook"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fab fa-github"></i></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <p>This website is developed by NinjaCoder</p>
-      </footer>
     </main>
+    <footer>
+      <div id="footer">
+        <h3>Follow me on</h3>
+        <div id="social-media">
+          <ul>
+            <li>
+              <a href="#"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-github"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <p>This website is developed by NinjaCoder</p>
+    </footer>
   </body>
 </html>
