added JavaScript for the searchIcon and menuIcon

--- a/index.html
+++ b/index.html
@@ -197,5 +197,6 @@
       </div>
       <p>This website is developed by NinjaCoder</p>
     </footer>
+    <script src="main.js"></script>
   </body>
 </html>
