Added about, bloglist and blogpost pages

--- a/blogslist.html
+++ b/blogslist.html
@@ -71,15 +71,8 @@
       <input type="text" placeholder="Search" />
     </div>
 
-    <div id="banner">
-      <h1>&lt;NinjaCoder/&gt;</h1>
-      <h3>Code like a pro</h3>
-    </div>
-
     <main>
-      <a href="blogslist.html">
-        <h2 class="section-heading">All blogs</h2>
-      </a>
+      <h2 class="page-heading">Blogs</h2>
       <section>
         <div class="card">
           <div class="card-image">
@@ -91,6 +84,9 @@
             <a href="blogpost.html">
               <h3>The Blog Tilte Here</h3>
             </a>
+            <div class="card-meta">
+              Posted by Admin on 24/03/2019 in <a href="#">Web Dev</a>
+            </div>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Assumenda minus beatae non ea, fugit officia quisquam sit dolorem
@@ -103,14 +99,17 @@
 
         <div class="card">
           <div class="card-image">
-            <a href="#">
+            <a href="blogpost.html">
               <img src="assets/4.jpg" alt="Card Image" />
             </a>
           </div>
           <div class="card-description">
-            <a href="#">
+            <a href="blogpost.html">
               <h3>The Blog Tilte Here</h3>
             </a>
+            <div class="card-meta">
+              Posted by Admin on 24/03/2019 in <a href="#">Web Dev</a>
+            </div>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Assumenda minus beatae non ea, fugit officia quisquam sit dolorem
@@ -120,41 +119,42 @@
             <a href="#" class="btn-readmore">Read More</a>
           </div>
         </div>
-      </section>
-
-      <h2 class="section-heading">All Projects</h2>
-
-      <section>
         <div class="card">
           <div class="card-image">
-            <a href="#">
-              <img src="assets/1.jpg" alt="Card Image" />
+            <a href="blogpost.html">
+              <img src="assets/3.jpg" alt="Card Image" />
             </a>
           </div>
           <div class="card-description">
-            <a href="#">
-              <h3>The Project Tilte Here</h3>
+            <a href="blogpost.html">
+              <h3>The Blog Tilte Here</h3>
             </a>
+            <div class="card-meta">
+              Posted by Admin on 24/03/2019 in <a href="#">Web Dev</a>
+            </div>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Assumenda minus beatae non ea, fugit officia quisquam sit dolorem
               praesentium dolorum quibusdam labore velit molestiae vel cumque,
               vitae excepturi illum consequatur.
             </p>
-            <a href="#" class="btn-readmore">Read More</a>
+            <a href="blogpost.html" class="btn-readmore">Read More</a>
           </div>
         </div>
 
         <div class="card">
           <div class="card-image">
-            <a href="#">
-              <img src="assets/2.jpg" alt="Card Image" />
+            <a href="blogpost.html">
+              <img src="assets/4.jpg" alt="Card Image" />
             </a>
           </div>
           <div class="card-description">
-            <a href="#">
-              <h3>The Project Tilte Here</h3>
+            <a href="blogpost.html">
+              <h3>The Blog Tilte Here</h3>
             </a>
+            <div class="card-meta">
+              Posted by Admin on 24/03/2019 in <a href="#">Web Dev</a>
+            </div>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Assumenda minus beatae non ea, fugit officia quisquam sit dolorem
@@ -165,18 +165,13 @@
           </div>
         </div>
       </section>
-
-      <h2 class="section-heading">Source code</h2>
-
-      <section id="section-source">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ut
-          molestiae repudiandae voluptatibus sequi at doloremque, facere tempore
-          cum nostrum officiis amet ipsum. Aspernatur provident mollitia
-          perferendis laudantium odit nulla!
-        </p>
-        <a class="btn-readmore" href="#">GitHub Profile</a>
-      </section>
+      <div class="pagination">
+        <a href="">Prev</a>
+        <a href="">4</a>
+        <a href="">5</a>
+        <a href="">6</a>
+        <a href="">Next</a>
+      </div>
     </main>
     <footer>
       <div id="footer">
