added favicon and btn animation in banner

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab"
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
       rel="stylesheet"
     />
     <link
@@ -15,7 +15,8 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
-    <title>NinjaCoder</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico" />
+    <title>About</title>
   </head>
   <body>
     <div id="slideout-menu">
@@ -48,7 +49,7 @@
       </div>
       <ul>
         <li>
-          <a class="active" href="index.html">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
           <a href="blogslist.html">Blog</a>
@@ -57,7 +58,7 @@
           <a href="projects.html">Projects</a>
         </li>
         <li>
-          <a href="about.html">About</a>
+          <a href="about.html" class="active">About</a>
         </li>
         <li>
           <div id="search-icon">
