--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab"
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
       rel="stylesheet"
     />
     <link
@@ -15,6 +15,7 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico" />
     <title>NinjaCoder</title>
   </head>
   <body>
@@ -72,8 +73,12 @@
     </div>
 
     <div id="banner">
-      <h1>&lt;NinjaCoder/&gt;</h1>
-      <h3>Code like a pro</h3>
+      <h4>&lt;Pradip <span>Bohora</span> /&gt;</h4>
+      <p>
+        Code like a pro Code like a pro Code like a pro Code like a pro Code
+        Code like a pro Code like a pro Code like a pro Code like a pro Code
+      </p>
+      <a href="blogpost.html" class="btn-projects">Check my Work</a>
     </div>
 
     <main>
@@ -121,51 +126,55 @@
           </div>
         </div>
       </section>
+    </main>
+    <div class="project-section">
+      <main>
+        <h2 class="section-heading">All Projects</h2>
 
-      <h2 class="section-heading">All Projects</h2>
+        <section>
+          <div class="card">
+            <div class="card-image">
+              <a href="#">
+                <img src="assets/1.jpg" alt="Card Image" />
+              </a>
+            </div>
+            <div class="card-description">
+              <a href="#">
+                <h3>The Project Tilte Here</h3>
+              </a>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Assumenda minus beatae non ea, fugit officia quisquam sit
+                dolorem praesentium dolorum quibusdam labore velit molestiae vel
+                cumque, vitae excepturi illum consequatur.
+              </p>
+              <a href="#" class="btn-readmore">Read More</a>
+            </div>
+          </div>
 
-      <section>
-        <div class="card">
-          <div class="card-image">
-            <a href="#">
-              <img src="assets/1.jpg" alt="Card Image" />
-            </a>
+          <div class="card">
+            <div class="card-image">
+              <a href="#">
+                <img src="assets/2.jpg" alt="Card Image" />
+              </a>
+            </div>
+            <div class="card-description">
+              <a href="#">
+                <h3>The Project Tilte Here</h3>
+              </a>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Assumenda minus beatae non ea, fugit officia quisquam sit
+                dolorem praesentium dolorum quibusdam labore velit molestiae vel
+                cumque, vitae excepturi illum consequatur.
+              </p>
+              <a href="#" class="btn-readmore">Read More</a>
+            </div>
           </div>
-          <div class="card-description">
-            <a href="#">
-              <h3>The Project Tilte Here</h3>
-            </a>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Assumenda minus beatae non ea, fugit officia quisquam sit dolorem
-              praesentium dolorum quibusdam labore velit molestiae vel cumque,
-              vitae excepturi illum consequatur.
-            </p>
-            <a href="#" class="btn-readmore">Read More</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-image">
-            <a href="#">
-              <img src="assets/2.jpg" alt="Card Image" />
-            </a>
-          </div>
-          <div class="card-description">
-            <a href="#">
-              <h3>The Project Tilte Here</h3>
-            </a>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Assumenda minus beatae non ea, fugit officia quisquam sit dolorem
-              praesentium dolorum quibusdam labore velit molestiae vel cumque,
-              vitae excepturi illum consequatur.
-            </p>
-            <a href="#" class="btn-readmore">Read More</a>
-          </div>
-        </div>
-      </section>
-
+        </section>
+      </main>
+    </div>
+    <main>
       <h2 class="section-heading">Source code</h2>
 
       <section id="section-source">
