--- a/blogslist.html
+++ b/blogslist.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Slab"
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
       rel="stylesheet"
     />
     <link
@@ -15,9 +15,10 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
-    <title>NinjaCoder</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico" />
+    <title>Blogs</title>
   </head>
-  <body>
+  <body class="blogslist-background">
     <div id="slideout-menu">
       <ul>
         <li>
@@ -48,10 +49,10 @@
       </div>
       <ul>
         <li>
-          <a class="active" href="index.html">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="blogslist.html">Blog</a>
+          <a href="blogslist.html" class="active">Blog</a>
         </li>
         <li>
           <a href="projects.html">Projects</a>
